--- a/flask/fundamentals/html_table/templates/index.html
+++ b/flask/fundamentals/html_table/templates/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Table</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>First Name</th>
@@ -20,7 +21,7 @@
             <tr>
                 <td>{{person['first_name']}}</td>
                 <td>{{person['last_name']}}</td>
-                <td>{{person['first_name'] +  person ['last_name']}}</td>
+                <td>{{person['first_name']}}  {{person['last_name']}}</td>
             </tr>
             {% endfor %}
         </tbody>
