--- a/full_stack_projects/users_cr/templates/new_user.html
+++ b/full_stack_projects/users_cr/templates/new_user.html
@@ -7,7 +7,7 @@
     <title>Create</title>
 </head>
 <body>
-    <h1>Add a New User</h1> <a href="/">Home</a>
+    <h1>Add a New User</h1> <a href="/users">Home</a>
     <form action="/users/add" method="post">
         <p>
             First Name:
