--- a/full_stack_projects/users_crud/templates/index.html
+++ b/full_stack_projects/users_crud/templates/index.html
@@ -14,6 +14,7 @@
             <th>Full Name</th>
             <th>Email</th>
             <th>Created At</th>
+            <th>Actions</th>
         </thead>
         <tbody>
             {% for user in all_users %}
@@ -22,6 +23,10 @@
                     <td>{{ user.first_name}}  {{user.last_name}}</td>
                     <td>{{ user.email}}</td>
                     <td>{{ user.created_at}}</td>
+                    <td><a href="/users/{{user.id}}"> Show |</a>
+                        <a href="/users/{{user.id}}/edit">Edit |</a>
+                        <a href="/users/{{user.id}}/destroy">Delete</a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
