--- a/full_stack_projects/users_crud/templates/user.html
+++ b/full_stack_projects/users_crud/templates/user.html
@@ -12,5 +12,9 @@
     <p>Email: {{user.email}}</p>
     <p>Created: {{user.created_at}}</p>
     <p>Last Updated: {{user.updated_at}}</p>
+    <p>
+        <a href="/users/{{user.id}}/edit">Edit |</a>
+        <a href="/users/{{user.id}}/destroy">Delete </a>
+    </p>
 </body>
 </html>
