--- a/Dojos_and_Ninjas/flask_app/templates/new_ninja.html
+++ b/Dojos_and_Ninjas/flask_app/templates/new_ninja.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>New Ninja</h2> 
-    <form action="/ninja/create" method="post">
+    <form action="/ninjas/create" method="post">
         <p>
             Dojo:
             <select name="dojo_id" id="">
