--- a/login_and_registration/flask_app/templates/client.html
+++ b/login_and_registration/flask_app/templates/client.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Client</title>
 </head>
 <body>
-    <h2>Welcome to your account, {{client.first_name}}</h2>
+    <h2>Welcome to your account</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First_Name</th>
+                <th>Last_Name</th>
+                <th>Email</th>
+                <th>Password</th>
+                <th>Created_at</th>
+                <th>Updated_at</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for client in all_clients %}
+                <tr>
+                    <td>{{ client.id }}</td>
+                    <td>{{ client.first_name}}</td>
+                    <td>{{ client.last_name }}</td>
+                    <td>{{ client.email }}</td>
+                    <td>{{ client.password}}</td>
+                    <td>{{ client.created_at}}</td>
+                    <td>{{ client.updated_at}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <div>
+        <h2>Client info</h2>
+        <p>{{client.first_name}}</p>
+        <p>{{client.last_name}}</p>
+        <p>{{client.email}}</p>
+    </div>
     <a href="/signout">Sign Out</a>
 </body>
 </html>
