--- a/login_and_registration/flask_app/templates/index.html
+++ b/login_and_registration/flask_app/templates/index.html
@@ -38,7 +38,7 @@
                 </p>
                 <p>
                     Confirm Password:
-                    <input type="password" name="password_confirmation" id="">
+                    <input type="password" name="confirm_password" id="">
                 </p>
                 <button>Sign Me Up!</button>
             </form>
