--- a/login_and_registration/flask_app/templates/index.html
+++ b/login_and_registration/flask_app/templates/index.html
@@ -19,7 +19,7 @@
     <div class ="row">
         <div class ="column1">
             <h3>Please register here:</h3>
-            <form action="/register" method="post">
+            <form action="/signup" method="post">
                 <p>
                     First Name:
                     <input type="text" name="first_name" id="">
@@ -38,14 +38,14 @@
                 </p>
                 <p>
                     Confirm Password:
-                    <input type="password" name="confirm_password" id="">
+                    <input type="password" name="password_confirmation" id="">
                 </p>
                 <button>Sign Me Up!</button>
             </form>
         </div>
         <div class ="column2">
             <h3>Client Login:</h3>
-            <form action="/login" method="post">
+            <form action="/signin" method="post">
                 <p>
                     Email:
                     <input type="text" name="email" id="">
