--- a/python_project/flask_app/templates/edit_item.html
+++ b/python_project/flask_app/templates/edit_item.html
@@ -4,30 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Item</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/edit.css') }}">
+    <title>Edit Item</title>
 </head>
 <body>
-    <h2>Edit Item</h2> 
-    <form action="/items/{{item.id}}/update" method="post">
-        <p>
-            Store: {{item.store.store_name}}
-        </p>
-        <p>
-            Item:
-            <input type ="text" name="item_name" id="" value="{{ item.item_name }}">
-        </p>
-        <p>
-            Description(optional):
-            <input type ="text" name="description" id="" value="{{ item.description }}">
-        </p>
-        <p>
-            Note to Self:
-            <input type ="text" name="note_to_self" id="" value="{{ item.note_to_self }}">
-        </p>
-        <button>Edit Item</button>
-    </form>
-        <p>
-            <a href="/">Home</a>
-        </p>
+    <div class="container">
+        <div class="topbar">
+            <h2 class="edittitle">Edit Item</h2>
+            <button class="homebtn"><a href="/" class="hometext">Home</a></button>
+        </div>
+        <div class="mainbox">
+            <form action="/items/{{item.id}}/update" method="post">
+                <p class="storename">
+                    Store: {{item.store.store_name}}
+                </p>
+                <p class="itemname"> 
+                    Item:
+                    <input type ="text" name="item_name" id="" value="{{ item.item_name }}">
+                </p>
+                <p class="description">
+                    Description(optional):
+                    <input type ="text" name="description" id="" value="{{ item.description }}">
+                </p>
+                <p class="selfnote">
+                    Note to Self:
+                    <input type ="text" name="note_to_self" id="" value="{{ item.note_to_self }}">
+                </p>
+                <button class="editbtn">Edit Item</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
